# addon-contrib

./: .gitignore  OWNERS  README.md
.github/: repositories.json
argocd-agent-addon/: README.md
clusternet-addon/: Dockerfile  Makefile  README.md  go.mod
device-addon/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
dynamic-scoring-framework/: .gitignore  Dockerfile  Dockerfile.addon  Makefile  OWNERS  PROJECT  README.md  go.mod  go.sum
dynamic-scoring-framework/samples/dynamic-scoring-framework-mcp/: Dockerfile  README.md  deployment.yaml  main.py  opt.py  output.json  params.json  params.yaml  pyproject.toml  readme.md  test.json
dynamic-scoring-framework/samples/dynamic-scoring-framework-mcp/examples/: output.json  output.yaml  params.json  params.yaml
dynamic-scoring-framework/samples/dynamic-scoring-framework-mcp/manifests/: clustersetbindings.yaml  mwrs-app01.yaml  mwrs-app02.yaml  policy-disable-mig-cluster1.yaml  policy-disable-mig-cluster2.yaml  policy-disable-mig-worker01.yaml  policy-disable-mig-worker02.yaml  policy-enable-mig-2g-cluster1.yaml  policy-enable-mig-2g-cluster2.yaml  policy-enable-mig-2g-worker01.yaml  policy-enable-mig-2g-worker02.yaml  policy-enable-mig-3g-cluster1.yaml  policy-enable-mig-3g-cluster2.yaml  policy-enable-mig-3g-worker01.yaml  policy-enable-mig-3g-worker02.yaml
dynamic-scoring-framework/samples/dynamic-scoring-framework-mcp/manifests/example-scores/: example-performance-score-cluster1.yaml  example-performance-score-cluster2.yaml  example-powerconsumption-score-cluster1.yaml  example-powerconsumption-score-cluster2.yaml  simple-prediction-score-cluster1.yaml  simple-prediction-score-cluster2.yaml
dynamic-scoring-framework/samples/dynamic-scoring-framework-mcp/templates/: placement-app.yaml  placement-policy.yaml  placementbinding.yaml
example-addon/: PROJECT  (+4 more)
federated-learning-controller/examples/flower/app-torch/: Dockerfile  entrypoint.sh  pyproject.toml
federated-learning-controller/examples/flower/app-torch/app_torch/: __init__.py  client_app.py  server_app.py  task.py  utils.py
flower-addon/cifar10/: Containerfile  __init__.py  client_app.py  pyproject.toml  server_app.py  task.py
flower-addon/cifar10/deploy/: kustomization.yaml  superexec-clientapp.yaml  superexec-serverapp.yaml
(+719 files in other folders)
